docs/v0.0.6/_sources/gallery/workflow/workflow.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/workflow/workflow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_workflow_workflow.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_workflow_workflow.py:


Workflow example
================

Just a dummy example to illustrate the workflow examples gallery.

.. GENERATED FROM PYTHON SOURCE LINES 8-41



.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gallery/workflow/images/sphx_glr_workflow_001.png
         :alt: workflow
         :srcset: /gallery/workflow/images/sphx_glr_workflow_001.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gallery/workflow/images/sphx_glr_workflow_002.png
         :alt: 1D sigma thresholding, HDBSCAN clustering (1D)
         :srcset: /gallery/workflow/images/sphx_glr_workflow_002.png
         :class: sphx-glr-multi-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.13.11/x64/lib/python3.13/site-packages/RosettaX/reader.py:531: UserWarning: This figure includes Axes that are not compatible with tight_layout, so results might be incorrect.
      fig.canvas.draw_idle()






|

.. code-block:: Python

    from RosettaX.reader import FCSFile
    from RosettaX.directories import fcs_data
    from RosettaX.clusterings import SigmaThresholdHDBSCAN

    file_dir = fcs_data / "sample.fcs"

    data = FCSFile(fcs_data / "sample_0.fcs")

    data.read_all_data()

    x = "488Org(Peak)"
    y = "405LALS(Peak)"

    figure = data.plot(
        figure_size=(6, 6),
        x=x,
        y=y,
        log_hist=False,
        ylim=(0.4e6, None),
        xlim=(1000, 100000),
        tight_layout=False
    )


    model = SigmaThresholdHDBSCAN()

    labels, means, modes, clean_data, mask = model.fit(
        x=data.data[x][:40_000],
        n_clusters=3,          # ask for two merged clusters
        threshold_x=4000,      # tweak according to data
        min_cluster_size=100,  # you can tweak; start not too high
        debug=True,
    )


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 4.248 seconds)


.. _sphx_glr_download_gallery_workflow_workflow.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: workflow.ipynb <workflow.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: workflow.py <workflow.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: workflow.zip <workflow.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
