docs/v0.0.8/_sources/gallery/workflow/workflow.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/workflow/workflow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_workflow_workflow.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_workflow_workflow.py:


Workflow example
================

Just a dummy example to illustrate the workflow examples gallery.

.. GENERATED FROM PYTHON SOURCE LINES 8-40



.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gallery/workflow/images/sphx_glr_workflow_001.png
         :alt: workflow
         :srcset: /gallery/workflow/images/sphx_glr_workflow_001.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gallery/workflow/images/sphx_glr_workflow_002.png
         :alt: 1D sigma thresholding, HDBSCAN clustering (1D)
         :srcset: /gallery/workflow/images/sphx_glr_workflow_002.png
         :class: sphx-glr-multi-img





.. code-block:: Python

    import matplotlib.pyplot as plt
    from RosettaX.utils.reader import FCSFile
    from RosettaX.directories import fcs_data
    from RosettaX.utils.clusterings import SigmaThresholdHDBSCAN

    file_dir = fcs_data / "sample_0.fcs"

    x = "488Org(Peak)"
    y = "405LALS(Peak)"


    with FCSFile(file_dir, writable=False) as fcs_file:
        x_values = fcs_file.column_copy(x, dtype=float, n=100_000)
        y_values = fcs_file.column_copy(y, dtype=float, n=100_000)

    figure, ax = plt.subplots(figsize=(6, 6))
    ax.scatter(x_values, y_values)
    ax.set_xlabel(x)
    ax.set_ylabel(y)
    plt.tight_layout()
    plt.show()


    model = SigmaThresholdHDBSCAN()

    labels, means, modes, clean_data, mask = model.fit(
        x=x_values,
        n_clusters=3,          # ask for two merged clusters
        threshold_x=4000,      # tweak according to data
        min_cluster_size=100,  # you can tweak; start not too high
        debug=True,
    )


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 3.601 seconds)


.. _sphx_glr_download_gallery_workflow_workflow.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: workflow.ipynb <workflow.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: workflow.py <workflow.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: workflow.zip <workflow.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
